tests/spec/emit/snapshots/binary_modulo.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> int {
    10 % 3
  }
---
package main

func test() int {
	return 10 % 3
}
