tests/spec/emit/snapshots/binary_multiplication.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> int {
    3 * 4
  }
---
package main

func test() int {
	return 3 * 4
}
