tests/spec/emit/snapshots/binary_subtraction.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> int {
    10 - 5
  }
---
package main

func test() int {
	return 10 - 5
}
