tests/spec/emit/snapshots/binary_uppercase.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> int {
    0B11110000
  }
---
package main

func test() int {
	return 0b11110000
}
