tests/spec/emit/snapshots/binary_with_underscores.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> int {
    0b1111_0000_1111_0000
  }
---
package main

func test() int {
	return 0b1111_0000_1111_0000
}
