tests/spec/emit/snapshots/block_expr_append_map_entry_no_double_eval.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Outer { items: Slice<int> }
  
  fn key() -> string { "a" }
  
  fn main() {
    let mut m = Map.new<string, Outer>()
    m["a"] = Outer{ items: [1] }
    let k = key()
    let mut entry = m[k]
    entry.items = entry.items.append(2)
    m[k] = entry
  }
---
package main

type Outer struct {
	items []int
}

func key() string {
	return "a"
}

func main() {
	m := make(map[string]Outer)
	m["a"] = Outer{items: []int{1}}
	k := key()
	entry := m[k]
	entry.items = append(entry.items, 2)
	m[k] = entry
}
