tests/spec/emit/snapshots/block_expr_append_non_lvalue_captures_result.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn get() -> Slice<int> { [1] }
  fn arg() -> int { 2 }
  
  fn main() {
    let x = { get().append(arg()) }
    let _ = x[1]
  }
---
package main

func get() []int {
	return []int{1}
}

func arg() int {
	return 2
}

func main() {
	var x []int
	recv := get()
	x = append(recv[:len(recv):len(recv)], arg())
	_ = x[1]
}
