tests/spec/emit/snapshots/block_expr_append_ref_newtype.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  struct Wrap(Slice<int>)
  
  fn get() -> Ref<Wrap> {
    let mut w = Wrap([1])
    &w
  }
  
  fn main() {
    let x = { get().0.append(2) }
    let _ = x[0]
  }
---
package main

type Wrap []int

func get() *Wrap {
	w := Wrap([]int{1})
	return &w
}

func main() {
	var x []int
	recv := ([]int)(*get())
	x = append(recv[:len(recv):len(recv)], 2)
	_ = x[0]
}
