tests/spec/emit/snapshots/block_expr_append_ref_slice_non_lvalue.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn get() -> Ref<Slice<int>> {
    let mut s = [1]
    &s
  }
  fn arg() -> int { 2 }
  
  fn main() {
    let x = { get().*.append(arg()) }
    let _ = x[1]
  }
---
package main

func get() *[]int {
	s := []int{1}
	return &s
}

func arg() int {
	return 2
}

func main() {
	var x []int
	ref := get()
	recv := *ref
	x = append(recv[:len(recv):len(recv)], arg())
	_ = x[1]
}
