tests/spec/emit/snapshots/block_expr_same_name_as_let_binding.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn test() -> int {
    let result = {
      let result = 42;
      result * 2
    }
    result
  }
---
package main

func test() int {
	var result_1 int
	{
		result := 42
		result_1 = result * 2
	}
	return result_1
}
