tests/spec/emit/snapshots/block_expr_unit_returning_call.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn do_nothing() {}
  
  fn main() {
    let x = { do_nothing() }
    let _ = x
  }
---
package main

func doNothing() {}

func main() {
	var x struct{}
	doNothing()
	x = struct{}{}
	_ = x
}
