tests/spec/emit/snapshots/block_expression_shadowing_does_not_leak.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> int {
    let y = 10
    let z = {
      let y = 20
      y
    }
    let _ = z
    y
  }
---
package main

func test() int {
	y := 10
	var z int
	{
		y := 20
		z = y
	}
	_ = z
	return y
}
